add calamares config

--- a/core/airootfs/etc/calamares/modules/packages.conf
+++ b/core/airootfs/etc/calamares/modules/packages.conf
@@ -203,21 +203,12 @@ pacman:
 #
 operations:
   - try_remove:
-    - plasma-framework5
-    - kpmcore
-    - yaml-cpp
-    - mkinitcpio-archiso
-    - boost-libs
-    - ckbcomp
     - core-calamares
-    - hwinfo
-    - qt5-xmlpatterns
-    - squashfs-tools
-    - kconfig5
-    - kcoreaddons5
-    - kiconthemes5
-    - ki18n5
-    - kio5
-    - solid5
-    - qt5-svg
+    - mkinitcpio-archiso
+    - mkinitcpio-openswap
+    - kpmcore
     - libpwquality
+    - squashfs-tools
+    - ckbcomp
+    - yaml-cpp
+
