--- a/core/airootfs/etc/calamares/modules/shellprocess-before.conf
+++ b/core/airootfs/etc/calamares/modules/shellprocess-before.conf
@@ -70,6 +70,8 @@ timeout: 999
 #     - "/bin/ls"
 #     - "/usr/bin/true"
 
+# - "-/usr/bin/pacman -Sy"
+
 # Script may be a list of items (if the touch command fails, it is
 # ignored; the slowloris command has a different timeout from the
 # other commands in the list):
