--- a/core/airootfs/etc/calamares/modules/users.conf
+++ b/core/airootfs/etc/calamares/modules/users.conf
@@ -51,7 +51,7 @@ autologinGroup:  autologin
 #  - true to check or
 #  - false to uncheck
 # These set the **initial** state of the checkbox.
-doAutologin:     true
+doAutologin:     false
 
 # When *sudoersGroup* is set to a non-empty string, Calamares creates a
 # sudoers file for the user. This file is located at:
@@ -115,10 +115,10 @@ doReusePassword: true
 #    set both 'allowWeakPasswords' and 'allowWeakPasswordsDefault' to true.
 #    (That will show the box *Allow weak passwords* in the user-
 #    interface, and check it by default).
-#passwordRequirements:
-#    nonempty: true
-#    minLength: -1  # Password at least this many characters
-#    maxLength: -1  # Password at most this many characters
+passwordRequirements:
+    nonempty: true
+    minLength: -1  # Password at least this many characters
+    maxLength: -1  # Password at most this many characters
 #    libpwquality:
 #        - minlen=0
 #        - minclass=0
@@ -130,7 +130,7 @@ doReusePassword: true
 # the checkbox. This checkbox allows the user to choose to disable
 # password-strength-checks. By default the box is **hidden**, so
 # that you have to pick a password that satisfies the checks.
-allowWeakPasswords: false
+allowWeakPasswords: true
 # You can control the initial state for the 'strong passwords' checkbox here.
 # Possible values are:
 #  - true to uncheck or
@@ -205,7 +205,7 @@ user:
 hostname:
   location: EtcFile
   writeHostsFile: true
-  #template: "alci-${cpu}"
+  #template: "${first}-${product}"
   forbidden_names: [ localhost ]
 
 presets:
